# vaalilakanabot

./: .gitignore  .pylintrc  CLAUDE.md  Dockerfile  README.md  bot.env.example  create-vaalilakana.py  createvaalilakana.py  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  lakanaupdater.py  pyproject.toml  requirements.txt  update-deployment.sh  vaalilakanabot.py  vaalilakanabot2019.py  vaalilakanabot2021.py  vaalilakanabot2022.py  vaalilakanabot2023.py  vaalilakanabot2024.py
.github/workflows/: ci.yaml  ci.yml  release.yaml
data/: example-vaalilakana.json  example_channels.json  example_fiirumi_posts.json  example_question_posts.json  example_vaalilakana.json  vaalilakana.json
src/: __init__.py  admin_approval.py  admin_commands.py  announcements.py  application_handlers.py  bot.py  config.py  data_manager.py  fiirumi_area_generator.py  register_handlers.py  sheet_updater.py  sheets_data_manager.py  sheets_manager.py  types.py  user_commands.py  utils.py
